<resources>
    <string name="app_name">智能操控机械臂</string>
    <string name="load_picture" translatable="false">读取图片</string>
    <string name="load_video" translatable="false">读取视频</string>
    <string name="start_camera" translatable="false">摄像头</string>
    <string name="instruction" translatable="false">请按选用任何一种模式</string>
    <string name="exit_remind">再点击一次退出</string>
    <string name="open_bluetooth_title">开启蓝牙</string>
    <string name="open_bluetooth_content">是否开启蓝牙开关？</string>
    <string name="open_bluetooth_unsupported">您的设备不支持蓝牙</string>
    <string name="send_tips_bluetooth_no_connected">请先连接蓝牙</string>
    <string name="disconnect_tips_title">断开</string>
    <string name="disconnect_bluetooth_tips_connect">是否断开蓝牙?</string>
    <string name="disconnect_bluetooth_tips_succeed">蓝牙已断开</string>
    <string name="exit_tips_title">提示</string>
    <string name="exit_tips_content">断开连接并退出？</string>
    <string name="tips_bluetooth_not_support">蓝牙不可用</string>
    <string name="tips_open_bluetooth">请先开启蓝牙</string>
    <string name="dialog_yes">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_searching">正在搜索</string>
    <string name="dialog_search_finished">搜索结束</string>
    <string name="dialog_search_restart">重新搜索</string>
    <string name="dialog_search_stop">停止搜索</string>
    <string name="dialog_search_item_bonded">%1$s  (已配对)</string>
    <string name="bluetooth_state_connected">蓝牙已连接</string>
    <string name="bluetooth_state_connecting">正在连接蓝牙</string>
    <string name="bluetooth_state_connect_failure">蓝牙连接失败</string>
    <string name="bluetooth_state_disconnected">蓝牙已断开</string>
    <string name="set">设置</string>
    <string name="refresh">复位</string>
    <string name="delete_device">删除设备</string>
    <string name="ip_input_hint">请输入服务器地址</string>
    <string name="network_not_connected">网络未连接</string>
    <string name="disconnect_network_tips_connect">是否断开网络?</string>
    <string name="set_default_address">默认地址</string>
    <string name="default_address">103.91.209.218:13333</string>
</resources>
