<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/buttons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_load_picture"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_picture" />

        <Button
            android:id="@+id/button_start_camera"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_camera" />

        <ImageButton
            android:id="@+id/bluetooth_btn"
            style="@style/middle_btn"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/bluetooth_state_disconnected"
            android:scaleType="centerInside"
            android:src="@drawable/bluetooth_disconnected" />

        <ImageButton
            android:id="@+id/set_btn"
            style="@style/middle_btn"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/set"
            android:scaleType="centerInside"
            android:src="@drawable/set_btn" />

        <ImageButton
            android:id="@+id/test_btn"
            style="@style/middle_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/test"
            android:scaleType="centerInside"
            android:src="@drawable/square_btn" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/preview_display_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/no_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/instruction" />
    </FrameLayout>
</LinearLayout>
