<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="300dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#404353"
        android:gravity="center"
        android:orientation="horizontal">

        <com.catand.armtorobot.widget.CircularProgressView
            android:id="@+id/dialog_search_progress"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:cpv_animAutostart="true"
            app:cpv_color="@android:color/white"
            app:cpv_indeterminate="true"
            app:cpv_thickness="1.5dp" />

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/server_address_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ip_input_hint" />

        <View
            android:id="@+id/dialog_divider2"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/dialog_line" />

        <Button
            android:id="@+id/set_default_address"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_default_address" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/dialog_line" />

    <ListView
        android:id="@+id/device_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@color/dialog_line"
        android:dividerHeight="0.5dp"
        android:padding="5dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/dialog_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_left_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_cancel" />

        <View
            android:id="@+id/dialog_divider"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/dialog_line" />

        <Button
            android:id="@+id/dialog_right_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_search_restart" />
    </LinearLayout>
</LinearLayout>
